master test google api

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 <div id="root"></div>
-</body>
-<script type="application/javascript" src="bundle.js">
 
-</script>
+</body>
+<script type="application/javascript" src="bundle.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpqGzrsshm5D4Y5QCBScvTSNXkkSmWd54&callback=initMap">
+    </script>
+
 </html>
